# kinect-merge

./: .gitignore  LICENSE  README.md  calib.yml
dataset-office/: 0000-d.pgm  0000-p.yml  0001-d.pgm  0001-p.yml  0002-d.pgm  0002-p.yml  0003-d.pgm  0003-p.yml  0004-d.pgm  0004-p.yml  0005-d.pgm  0005-p.yml  0006-d.pgm  0006-p.yml  0007-d.pgm  0007-p.yml  0008-d.pgm  0008-p.yml  0009-d.pgm  0009-p.yml  0010-d.pgm  0010-p.yml  0011-d.pgm  0011-p.yml  0012-d.pgm  0012-p.yml  0013-d.pgm  0013-p.yml  0014-d.pgm  0014-p.yml  0015-d.pgm  0015-p.yml  0016-d.pgm  0016-p.yml  0017-d.pgm  0017-p.yml  0018-d.pgm  0018-p.yml  0019-d.pgm  0019-p.yml  (+4 more)
src/: CMakeLists.txt  kinect_calibration.cpp  kinect_calibration.h  kinect_merge.cpp  kinect_view.cpp  kinect_view.h
